exponats first page

--- a/blog.html
+++ b/blog.html
@@ -53,62 +53,10 @@
             <div class="blog__title title">Блог нашего музея</div>
             <div class="blog__posts">
                 <div class="blog__post post">
-                    <div class="post__animation"></div>
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.</div>
-                        <div class="post__link">
-                            <a href="">Читать далее...</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="blog__post post">
-                    <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
-                    <div class="post__text">
-                        <div class="post__animation"></div>
-                        <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__descr"></div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -118,27 +66,7 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__descr"></div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -148,27 +76,7 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__descr"></div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -178,27 +86,7 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__descr">О</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -208,27 +96,7 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
-                            для
-                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
-                            скоростью 60 знаков в минуту.</div>
+                        <div class="post__descr"></div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
