--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
                 <swiper-container slides-per-view="2" space-between="50">
                     <swiper-slide>
                         <div class="exponats__slide">
-                            <img src="img/iscra.jpg" alt="">
-                            <div class="exponats__slide-title">Искра</div>
-                            <div class="exponats__descr">"Искра" была нужна для применения в вычислительных центрах, на
-                                машиносчетных станциях, в научно-исследовательских и других организациях."Искра" была
-                                нужна
-                                для применения в вычислительных центрах, на
-                                машиносчетных станциях, в научно-исследовательских и других организациях."Искра" была
-                                нужна
-                                для применения в вычислительных центрах, на
-                                машиносчетных станциях, в научно-исследовательских и других организациях.
+                            <img src="img/exsponats/dima1.png" alt="">
+                            <div class="exponats__slide-title">DELTA-C</div>
+                            <div class="exponats__descr">«Дельта-С» — 8-разрядный домашний компьютер, выпускался с 1989
+                                года. Производился разными заводами в начале 1990-х годов. «Дельта-СА» производилась
+                                Курским Производственным Объединением «Прибор», другие версии — фирмой «Дельта-С» и
+                                заводом «Элара», г. Чебоксары. Возможно, также выпускался в Зеленограде.
+
+                                Модели «С» и «СА» отличались исполнением корпуса, но использовали одинаковые блоки
+                                питания и руководство по эксплуатации. Выпускалось несколько немного отличающихся
+                                вариантов этих компьютеров.
                             </div>
                             <div class="exponats__link">
                                 <a href="">Читать далее...</a>
@@ -120,11 +120,12 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="exponats__slide">
-                            <img src="img/esm.jpg" alt="">
-                            <div class="exponats__slide-title">ЭСМ</div>
-                            <div class="exponats__descr">ЭСМ занимается группировкой перфокарт по признакам для
-                                дальнейшей
-                                обработки на табуляторе. Разновидностью сортировальной машины является счетно...
+                            <img src="img/exsponats/C80.png" alt="">
+                            <div class="exponats__slide-title">C80</div>
+                            <div class="exponats__descr">С80 занимается группировкой перфокарт по признакам для
+                                дальнейшей обработки на табуляторе. Разновидностью сортировальной машины является
+                                счетно-сортировальная, т. е. имеющая приспособление для подсчета перфокарт в каждой
+                                группе.
                             </div>
                             <div class="exponats__link">
                                 <a href="">Читать далее...</a>
@@ -133,10 +134,43 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="exponats__slide">
-                            <img src="img/iscra.jpg" alt="">
-                            <div class="exponats__slide-title">Искра</div>
-                            <div class="exponats__descr">"Искра" была нужна для применения в вычислительных центрах, на
-                                машиносчетных станциях, в научно-исследовательских и других организациях.
+                            <img src="img/exsponats/starwars.png" alt="">
+                            <div class="exponats__slide-title">Эпидиаскоп "ЭПД-455"</div>
+                            <div class="exponats__descr">Эпидиаскоп "ЭПД-455" предназначался для проецирования на экран
+                                непрозрачных плоских оригиналов размером 90х120 мм и стеклянных диапозитивов (50х50,
+                                70х70, 85х85, 85х105 мм) в аудиториях, позволяющих обеспечить проекционное расстояние от
+                                3 до б м. При эпипроекции используется объектив "Триплет" (3,65/365 мм), при диапроекцип
+                                - "Индустар-51" (4,5/210 мм).
+                            </div>
+                            <div class="exponats__link">
+                                <a href="">Читать далее...</a>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="exponats__slide">
+                            <img src="img/exsponats/dima2.png" alt="">
+                            <div class="exponats__slide-title">ZX-SPECTRUM</div>
+                            <div class="exponats__descr">ZX Spectrum — 8-разрядный домашний компьютер, созданный
+                                английской компанией «Sinclair Research Ltd» на основе микропроцессора Zilog Z80. В ходе
+                                разработки компьютер назывался «ZX81 Colour» и «ZX82», название «ZX Spectrum» должно
+                                было подчеркнуть одно из главных отличий от его предшественника ZX81 — цветное
+                                изображение. Почитатели этого компьютера часто называют его «Спекки» (англ. Speccy).
+                            </div>
+                            <div class="exponats__link">
+                                <a href="">Читать далее...</a>
+                            </div>
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
+                        <div class="exponats__slide">
+                            <img src="img/exsponats/iscra.png" alt="">
+                            <div class="exponats__slide-title">Наири-3</div>
+                            <div class="exponats__descr">Машины семейства «Наири» сыграли значительную роль в развитии
+                                компьютеростроения СССР и стали достойным ответом западным ЭВМ. Наряду с развитием
+                                машины формировалась и карьера главного конструктора — Грачьи Есаевича Овсепяна.
+                                Жизненный путь этого талантливого человека был тернистым и нелегким, заполненным
+                                разработками и противостоянием с системой.
                             </div>
                             <div class="exponats__link">
                                 <a href="">Читать далее...</a>
