--- a/ecsposition.html
+++ b/ecsposition.html
@@ -150,7 +150,9 @@
     </section>
     <footer class="footer">
         <div class="container footer__wrapper">
-            <div class="footer__logo"><img src="img/logo.png" alt=""></div>
+            <div class="footer__logo">
+                <im g src="img/logo.png" alt="">
+            </div>
             <div class="footer__block">
                 Адрес:301240, Тульская область,<br> г.Щёкино, ул.Советская, 40
             </div>
