exponats first page

--- a/ecsposition.html
+++ b/ecsposition.html
@@ -78,7 +78,7 @@
         <div class="exspo2__title title">Название</div>
         <div class="container exspo2__wrapper">
             <div class="exspo2__block">
-                <img class="exspo2__bg" src="img/example1.png" alt="">
+                <img class="exspo2__bg" src="img/example1.webp" alt="">
                 <div class="exspo2__top">
                     <div class="exspo2__images">
                         <img src="img/exspo1.jpg" alt="">
