--- a/ecsposition.html
+++ b/ecsposition.html
@@ -52,7 +52,7 @@
         <div class="exspo1__title title">Название</div>
         <div class="container exspo1__wrapper">
             <div class="exspo1__block">
-                <img class="exspo1__bg" src="img/example2.png" alt="">
+                <img class="exspo1__bg" src="img/example2.webp" alt="">
                 <div class="exspo1__images">
                     <img src="img/exspo1.jpg" alt="">
                     <img src="img/exspo2.jpg" alt="">
@@ -118,7 +118,7 @@
         <div class="exspo3__title title">Название</div>
         <div class="container exspo3__wrapper">
             <div class="exspo3__block">
-                <img class="exspo3__bg" src="img/image 2.png" alt="">
+                <img class="exspo3__bg" src="img/example4.webp" alt="">
                 <div class="exspo3__images">
                     <img src="img/exspo1.jpg" alt="">
                     <img src="img/exspo2.jpg" alt="">
