--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,12 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr"></div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.
+                            Она умела считать только на ленту. Она была плохо приспособлена для скоростного набора и
+                            могла удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков
+                            в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -66,7 +71,9 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr"></div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -76,7 +83,9 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr"></div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -86,7 +95,9 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr">О</div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
@@ -96,7 +107,11 @@
                     <div class="post__image"><img src="img/exspo1.jpg" alt=""></div>
                     <div class="post__text">
                         <div class="post__title">Электромеханическая счётно-табличная машина "АСКОТА"</div>
-                        <div class="post__descr"></div>
+                        <div class="post__descr">Она умела считать только на ленту. Она была плохо приспособлена для
+                            скоростного набора и могла удовлетворять потребностям только юных бухгалтеров, работающих со
+                            скоростью 60 знаков в минуту.Она умела считать только на ленту. Она была плохо приспособлена
+                            для скоростного набора и могла удовлетворять потребностям только юных бухгалтеров,
+                            работающих со скоростью 60 знаков в минуту.</div>
                         <div class="post__link">
                             <a href="">Читать далее...</a>
                         </div>
