--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="nav__links">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="ecsposition.html">Экспозиции</a></li>
+                <li><a href="ecsposition.html">Экспозиция</a></li>
                 <li><a class="nav__active" href="blog.html">Блог</a></li>
             </div>
         </div>
