--- a/ecsposition.html
+++ b/ecsposition.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Экспозиции</title>
+    <title></title>
     <script src="https://kit.fontawesome.com/d83954f7da.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="nav__links">
                 <li><a href="index.html">Главная</a></li>
-                <li><a class="nav__active" href="ecsposition.html">Экспозиции</a></li>
+                <li><a class="nav__active" href="ecsposition.html">Экспозиция</a></li>
                 <li><a href="blog.html">Блог</a></li>
             </div>
         </div>
