--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <div class="container">
             <div class="nav__links">
                 <li><a class="nav__active" href="index.html">Главная</a></li>
-                <li><a href="ecsposition.html">Экспозиции</a></li>
+                <li><a href="ecsposition.html">Экспозиция</a></li>
                 <li><a href="blog.html">Блог</a></li>
             </div>
         </div>
     </nav>
     <section class="story">
         <div class="container">
-            <!-- <div class="story__title title">История</div> -->
+            <div class="story__title title">История</div>
             <div class="story__block">
                 <img src="img/story.jpg" alt="">
                 <p>Музей вычислительной техники ГПОУ ТО "ТЭК" был создан в 1986 году, он занимает площадь 65,7 м2. В
