--- a/NotFound.html
+++ b/NotFound.html
@@ -12,13 +12,14 @@
 
 <body>
     <div class="not-found">
-
-        <div class="not-found__block">
-            <div class="not-found__title">Ошибка 404</div>
-            <div class="not-found__descr">Страница не найдена!</div>
-            <a href="" class="not-found__link">Перейти к главной странице</a>
+        <div class="container not-found__wrapper">
+            <img src="img/404.png" alt="">
+            <div class="not-found__block">
+                <div class="not-found__title">Ошибка 404</div>
+                <div class="not-found__descr">Страница не найдена!</div>
+                <a href="index.html" class="not-found__link">Перейти к главной странице</a>
+            </div>
         </div>
-
     </div>
 </body>
 
