--- a/ecsposition.html
+++ b/ecsposition.html
@@ -69,7 +69,7 @@
                     удовлетворять потребностям только юных бухгалтеров, работающих со скоростью 60 знаков в минуту.
                 </div>
                 <div class="exspo1__block-link">
-                    <a href="#">Перейти к новости</a>
+                    <a href="#">Перейти к главной странице</a>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
 
                 </div>
                 <div class="exspo1__block-link">
-                    <a href="#">Перейти к новости</a>
+                    <a href="#">Перейти к главной странице</a>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="exspo3__block-link">
-                    <a href="#">Перейти к новости</a>
+                    <a href="#">Перейти к главной странице</a>
                 </div>
             </div>
         </div>
