--- a/admin.html
+++ b/admin.html
@@ -45,6 +45,7 @@
 
     </section>
     <button id="editButton">Изменить</button>
+    <button id="addButton">Добавить</button>
 
     <script src="js/accordion.js"></script>
     <script src="js/template.js"></script>
